fixed overflow with listing

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ body, html {
     justify-content: space-between;
 }
 
+
 /*Components*/
 /*FIXME: Die Transition funktioniert nicht richtig*/
 #input-area {
@@ -108,6 +109,10 @@ body, html {
     object-fit: contain;
 }
 
+#margin-container{
+    width: 15vw;
+}
+
 #nav-button-container {
     display: flex;
     justify-content: center;
@@ -146,8 +151,8 @@ body, html {
 }
 
 .point-list {
-    width: 10vw;
-    height: 90vh;
+    width: 15vw;
+    height: 70vh;
     overflow-y: auto;
     background-color: var(--bg);
     padding: var(--container-padding);
